# perfwatch

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: python-publish.yml
perfwatch/: __init__.py
perfwatch/src/: __init__.py  watcher.py
perfwatch/src/cache/: __init__.py  profiler.py
perfwatch/src/cpu/: __init__.py  profiler.py
perfwatch/src/gpu/: __init__.py  profiler.py
perfwatch/src/io/: __init__.py  profiler.py
perfwatch/src/network/: __init__.py  profiler.py
perfwatch/src/system/: __init__.py  parser.py  profiler.py
perfwatch/src/thread/: __init__.py  profiler.py
perfwatch/utils/: logger.py
tests/: conftest.py  test_profile_performance.py
