[tool.poetry]
name = "perfwatch"
version = "0.0.0"
description = "Python code performace metrics calculation tool"
authors = ["Khushiyant <khushiyant2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.8"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.3"
scapy = "^2.5.0"
nvidia-ml-py3 = "^7.352.0"
python-dotenv = "^1.0.1"
cachetools = "^5.4.0"
sentry-sdk = "^2.13.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
pre-commit = "^3.7.1"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
